deploy/traefik/ingressroute-dev.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: challenge-devops-dev
  namespace: dev

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`dev.challenge.local`)
      kind: Rule

      services:
        - name: challenge-devops-dev-service
          port: 80
