deploy/traefik/ingressroute-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: grafana
  namespace: observability

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`grafana.challenge.local`)
      kind: Rule

      services:
        - name: grafana
          port: 80
