deploy/traefik/ingressroute-prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: prometheus
  namespace: observability

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`prometheus.challenge.local`)
      kind: Rule

      services:
        - name: prometheus-server
          port: 80
