deploy/traefik/ingressroute-tempo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: tempo
  namespace: observability

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`tempo.challenge.local`)
      kind: Rule

      services:
        - name: tempo
          port: 80
